<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="325dp"
        android:layout_height="match_parent"
        android:layout_marginTop="11dp"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/aboutus_back"
            android:layout_width="25dp"
            android:layout_height="26dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/back"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:text="@string/about_us"
            android:textSize="18sp"
            android:textColor="@color/grey"/>

        <ImageView
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:layout_marginTop="61dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/iv_aboutus"/>
        <TextView
            android:layout_width="90dp"
            android:layout_height="22dp"
            android:layout_marginTop="207dp"
            android:layout_centerHorizontal="true"
            android:text="Holo-frame"
            android:textSize="16sp"
            android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/app_version"
            android:layout_width="73dp"
            android:layout_height="17dp"
            android:layout_marginTop="234dp"
            android:layout_centerHorizontal="true"
            android:text="版本 0.10.24"
            android:textColor="@color/tv_nomarl"
            android:textSize="12sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="312dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_addversion"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="55dp"
                android:text="@string/add_version"
                android:textSize="14sp"
                android:textColor="@color/tv_nomarl"/>
            <Button
                android:id="@+id/to_addversion"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/go"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="362dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_updateversion"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="55dp"
                android:text="@string/update_version"
                android:textSize="14sp"
                android:textColor="@color/tv_nomarl"/>
            <Button
                android:id="@+id/to_updateversion"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/go"/>
        </RelativeLayout>
        <TextView
            android:layout_width="85dp"
            android:layout_height="17dp"
            android:layout_marginLeft="79dp"
            android:layout_marginBottom="44dp"
            android:text="@string/user_agreement2"
            android:layout_alignParentBottom="true"
            android:textColor="#0283E1"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="78dp"
            android:layout_height="17dp"
            android:layout_marginLeft="160dp"
            android:layout_marginBottom="44dp"
            android:layout_alignParentBottom="true"
            android:text="@string/privacy_policy2"
            android:textColor="#0283E1"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="111dp"
            android:layout_height="11dp"
            android:text="@string/CSLine"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="28dp"
            android:layout_alignParentBottom="true"
            android:textSize="8sp"
            android:textColor="@color/tv_nomarl"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="11dp"
            android:text="@string/ownership"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:layout_alignParentBottom="true"
            android:textSize="8sp"
            android:textColor="@color/tv_nomarl" />
    </RelativeLayout>
</RelativeLayout>
