<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="325dp"
        android:layout_height="match_parent"
        android:layout_marginTop="11dp"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/phone_back"
            android:layout_width="25dp"
            android:layout_height="26dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/back"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:text="@string/bindphone"
            android:textSize="18sp"
            android:textColor="@color/grey"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="108dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/iv_phone"/>
        <TextView
            android:id="@+id/tv_bindphone"
            android:layout_width="218dp"
            android:layout_height="22dp"
            android:layout_marginTop="268dp"
            android:layout_centerHorizontal="true"
            android:text="@string/bind_phone"
            android:textSize="16sp"
            android:textColor="@color/grey"/>
        <Button
            android:id="@+id/phone_change"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="359dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btlogin_border"
            android:text="@string/changephone"
            android:textSize="16sp"
            android:textColor="#FBFBFB"/>
    </RelativeLayout>
</RelativeLayout>