<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/shareaccount_unbound_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:text="@string/unbound_shareaccount"
            android:textSize="18sp"
            android:textColor="@color/grey"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="213dp"
            android:background="@drawable/iv_nodevice"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_marginTop="358dp"
            android:layout_centerHorizontal="true"
            android:text="@string/unbound_shareaccount_tip1"
            android:textSize="18sp"
            android:textColor="@color/tv_nomarl"/>
        <Button
            android:id="@+id/shareaccount_unbound_confirm"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="47dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/unbound_confirm"
            android:textColor="#FBFBFB"
            android:textSize="16sp"
            android:background="@drawable/btsignout_border"/>
    </RelativeLayout>
</RelativeLayout>
