<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/changename_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:text="@string/change_name"
            android:textSize="18sp"
            android:textColor="@color/grey"/>

        <EditText
            android:id="@+id/et_changename"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="82dp"
            android:layout_centerHorizontal="true"
            android:maxLength="5"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/grey"
            android:background="@null"/>

        <TextView
            android:layout_width="132dp"
            android:layout_height="17dp"
            android:text="@string/change_name_tip1"
            android:textSize="12sp"
            android:textColor="#BCBCBC"
            android:layout_marginTop="132dp"
            android:layout_marginLeft="11dp"/>

        <Button
            android:id="@+id/bt_savename"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"
            android:text="@string/save"
            android:textColor="#FBFBFB"
            android:textSize="16sp"
            android:background="@drawable/btconfirm_border"/>
    </RelativeLayout>
</RelativeLayout>
